# FindJob.lat

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 27db3a4305d2_initial_schema.py  a1b2c3d4e5f6_gemini_embedding_768.py  b2c3d4e5f6a7_auth_karma_company_reports.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  schemas.py
app/api/routes/: __init__.py  auth.py  company_reports.py  meta.py  (+2 more)
app/core/: __init__.py  config.py  cookies.py  database.py  rate_limit.py  security.py
app/middleware/: security_headers.py
app/models/: __init__.py  alert.py  application.py  base.py  company_report.py  karma_event.py  oauth_account.py  offer.py  profile.py  salary_report.py  saved_offer.py  source.py  user.py
app/scrapers/: __init__.py  base.py  bumeran.py  computrabajo.py  registry.py  remoteok.py  schemas.py
app/services/: __init__.py  auth.py  company_reports.py  cv_intelligence.py  cv_parser.py  embeddings.py  karma.py  location_filter.py  normalizer.py  offer_ingest.py  offer_matching.py  source_defaults.py
app/tasks/: __init__.py
frontend/: ecosystem.config.cjs  package-lock.json  package.json  tailwind.config.ts
frontend/public/: site.webmanifest
scripts/: embed_offers.py  embed_status.sh  embed_tick.sh  migrate_computrabajo_sources.py  probe_bumeran.py  run_api.sh  scrape.py  scrape_computrabajo.py  scrape_daily.sh  scrape_latam.sh
scripts/cron/: install-findjob-cron.sh
scripts/deploy/: cloudflared-findjob.sh  deploy-app.sh  findjob-api.service  findjob-web.service  fix-db-password.sh  fix-python311.sh  install-playwright.sh  nginx-findjob.conf  setup-server.sh
(+53 files in other folders)
